--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./javascript.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
   <div class = "container">
@@ -15,6 +15,6 @@
 
     <p id="save-el">Previous entires: </p>
   </div>
-    <script src="./javascript.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
